# minigame

./: CMakeLists.txt  README.md
src/: main.cpp
src/objects/champions/: Player.cpp  Player.h
src/objects/champions/classes/enums/: ClassType.h  ClassTypeUtils.h
src/objects/champions/items/: Item.cpp  Item.h
src/objects/champions/items/enums/: Emplacements.h  ItemList.h
src/objects/champions/spells/: Boost.cpp  Boost.h  Spell.cpp  Spell.h
src/objects/champions/spells/enums/: SpellsList.h
src/objects/champions/upgrades/: Upgrade.cpp  Upgrade.h  Upgrades.cpp  Upgrades.h
src/objects/game/engine/: GameMaster.cpp  GameMaster.h
src/objects/game/rendering/: Renderer.cpp  Renderer.h
src/objects/game/rendering/enums/: Colors.cpp  Colors.h
